--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Jost');
+
 .App {
   background-color: #fbb034;
   background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
@@ -10,13 +12,14 @@
 }
 
 .App header {
-  background-color: #fbb034;
-  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
+  background-color:transparent;
+  background-image: none;
   position: sticky;
   top: 0;  
 }
 
 .app-body {
+  overflow-y: hidden;
 }
 
 .App-link {
@@ -36,4 +39,8 @@
 
 .nav-bar a.nav-link-active {
   color: white;
+}
+
+h1, h2, h3, h4, p, strong { 
+  font-family: 'Jost'
 }
