--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
   background-image: none;
   position: sticky;
   top: 0;
+  width: 100vw;
 }
 
 .app-body {
@@ -106,3 +107,11 @@ strong {
 .item103 {
   grid-row: span 3;
 }
+
+/* Media Queries */
+/* @media screen and (max-width: 600px) {
+  .App {
+    max-width: 100vw;
+    max-height: 100vh;
+  }
+} */
